--- a/src/Components/index.scss
+++ b/src/Components/index.scss
@@ -4,6 +4,7 @@ $font-logo: "Signika Negative", sans-serif;
 
 $color-background: #fff5eb;
 $color-primary: #deedf0;
+$color-primary-hover: #6F9DC8;
 $color-secondary: #f4c7ab;
 $color-tertiary: #b2b8a3;
 
