--- a/src/Components/Routines/routines.scss
+++ b/src/Components/Routines/routines.scss
@@ -12,10 +12,6 @@
   height: auto;
 
   .routine-preview {
-    * {
-      text-decoration: none;
-      color: black;
-    }
     width: 300px;
     height: 300px;
     background-color: index.$color-primary;
@@ -32,56 +28,98 @@
       border: 1px solid rgb(93, 108, 116);
       box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px, rgb(231 238 236) 0px 0px 0px 3px;
     }
-    .remove-routine {
-      display: inline-block;
-      outline: 0;
-      appearance: none;
-      padding: 0px 12px;
-      border-radius: 4px;
-      cursor: pointer;
-      background-color: index.$color-background;
-      border: 1px solid rgb(137, 151, 155);
-      box-shadow: rgb(6 22 33 / 30%) 0px 1px 2px;
-      color: rgb(61, 79, 88);
-      font-size: 14px;
-      font-weight: 400;
-      height: 36px;
-      transition: all 150ms ease-in-out 0s;
-      margin-top: 10px;
-      margin-right: 8px;
 
-      &:hover {
+    .routine-card {
+      position: relative;
+      height: 100%;
+
+      * {
+        text-decoration: none;
+        color: black;
+      }
+      .remove-routine {
+        display: inline-block;
+        outline: 0;
+        appearance: none;
+        padding: 0px 12px;
+        border-radius: 4px;
+        cursor: pointer;
+        background-color: index.$color-background;
+        border: 1px solid rgb(137, 151, 155);
+        box-shadow: rgb(6 22 33 / 30%) 0px 1px 2px;
         color: rgb(61, 79, 88);
-        background-color: index.$color-secondary;
-        border: 1px solid rgb(93, 108, 116);
-        box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px,
-          rgb(231 238 236) 0px 0px 0px 3px;
+        font-size: 14px;
+        font-weight: 400;
+        height: 36px;
+        transition: all 150ms ease-in-out 0s;
+        position: absolute;
+        bottom: 3%;
+        margin: 10px auto;
+        right: 25%;
+
+        &:hover {
+          color: rgb(61, 79, 88);
+          background-color: index.$color-secondary;
+          border: 1px solid rgb(93, 108, 116);
+          box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px,
+            rgb(231 238 236) 0px 0px 0px 3px;
+        }
+      }
+
+      .routine-info {
+        h2 {
+          margin-top: 10px;
+          font-size: 20pt;
+          font-family: index.$font-title;
+          letter-spacing: 2px;
+          font-weight: 700;
+        }
+
+        img {
+          width: 200px;
+          height: 200px;
+        }
+
+        h3 {
+          font-size: 14pt;
+          font-family: index.$font-title;
+          font-weight: 400;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display: -webkit-box;
+          -webkit-line-clamp: 4;
+          -webkit-box-orient: vertical;
+        }
       }
     }
   }
-  .routine-info {
-    h2 {
-      margin-top: 10px;
-      font-size: 20pt;
-      font-family: index.$font-title;
-      letter-spacing: 2px;
-      font-weight: 700;
-    }
+}
 
-    img {
-      width: 200px;
-      height: 200px;
-    }
+.add-routine {
+  display: flex;
+  justify-content: center;
+  button {
+    outline: 0;
+    appearance: none;
+    padding: 0px 12px;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: index.$color-background;
+    border: 1px solid rgb(137, 151, 155);
+    box-shadow: rgb(6 22 33 / 30%) 0px 1px 2px;
+    color: rgb(61, 79, 88);
+    font-size: 28px;
+    font-weight: 400;
+    height: 100px;
+    width: 400px;
+    transition: all 150ms ease-in-out 0s;
+    margin: 10px auto;
 
-    h3 {
-      font-size: 14pt;
-      font-family: index.$font-title;
-      font-weight: 400;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: -webkit-box;
-      -webkit-line-clamp: 4;
-      -webkit-box-orient: vertical;
+    &:hover {
+      color: rgb(61, 79, 88);
+      background-color: index.$color-secondary;
+      border: 1px solid rgb(93, 108, 116);
+      box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px, rgb(231 238 236) 0px 0px 0px 3px;
     }
   }
 }
