added navbar, topbar

--- a/src/Components/index.scss
+++ b/src/Components/index.scss
@@ -1,6 +1,6 @@
-$font-content: "Merriweather Sans", sans-serif;
-$font-title: "Montserrat", sans-serif;
-$font-logo: "Signika Negative", sans-serif;
+$font-content: 'Merriweather Sans', sans-serif;
+$font-title: 'Montserrat', sans-serif;
+$font-logo: 'Signika Negative', sans-serif;
 
 $color-background: #fff5eb;
 $color-primary: #deedf0;
