--- a/src/Components/SingleStretch/singlestretch.scss
+++ b/src/Components/SingleStretch/singlestretch.scss
@@ -12,8 +12,8 @@
   height: auto;
 
   .single-stretch-card {
-    width: 500px;
-    height: 500px;
+    width: 50vw;
+    height: 50vh;
     background-color: index.$color-primary;
     text-align: center;
     border-radius: 10px;
@@ -21,6 +21,21 @@
     box-shadow: 10px 8px 0px index.$color-primary-hover;
     transition-property: box-shadow;
     transition-duration: 0.5s;
+    padding-top: 15px;
+
+    h2 {
+      margin-top: 10px;
+      font-size: 20pt;
+      font-family: index.$font-title;
+      letter-spacing: 2px;
+      font-weight: 700;
+    }
+
+    h3 {
+      font-size: 14pt;
+      font-family: index.$font-title;
+      font-weight: 400;
+    }
 
     &:hover {
       color: rgb(61, 79, 88);
@@ -33,14 +48,6 @@
       * {
         text-decoration: none;
         color: black;
-      }
-
-      h2 {
-        margin-top: 10px;
-        font-size: 20pt;
-        font-family: index.$font-title;
-        letter-spacing: 2px;
-        font-weight: 700;
       }
 
       img {
