--- a/src/Components/Topbar/Topbar.scss
+++ b/src/Components/Topbar/Topbar.scss
@@ -1,17 +1,17 @@
-@import '../index.scss';
+@import "../index.scss";
 
 .topbar {
   width: 100%;
   height: 70px;
   background-color: $color-background;
   color: $color-primary;
-  position: fixed;
+  // position: fixed;
   top: 0;
   z-index: 3;
   transition: all 1s ease;
 
   .wrapper {
-    padding: 10px 30px;
+    padding: 0px 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
