--- a/src/Components/AllStretches/allstretches.scss
+++ b/src/Components/AllStretches/allstretches.scss
@@ -9,7 +9,7 @@
   justify-content: space-evenly;
   align-items: center;
   width: 90%vw;
-  height: auto;
+  height: 100vh;
 
 
   .stretch-preview{
