made fixed topbar, removed navbar close, created footer, structured routes in div inline of app.js, redeclared styling variables in index.scss

--- a/src/Components/index.scss
+++ b/src/Components/index.scss
@@ -1,12 +1,12 @@
-$font-content: 'Merriweather Sans', sans-serif;
-$font-title: 'Montserrat', sans-serif;
-$font-logo: 'Signika Negative', sans-serif;
+$font-content: "Signika Negative", sans-serif;
+$font-title: "Signika Negative", sans-serif;
+$font-logo: "Signika Negative", sans-serif;
 
-$color-background: #fff5eb;
-$color-primary: #deedf0;
+$color-background: #ecf5ff;
+$color-primary: #d6e9ff;
 $color-primary-hover: #6f9dc8;
-$color-secondary: #f4c7ab;
-$color-tertiary: #b2b8a3;
+$color-secondary: #6a8cb5;
+$color-tertiary: #23b54d;
 
 * {
   margin: 0;
