--- a/src/Components/AllStretches/allstretches.scss
+++ b/src/Components/AllStretches/allstretches.scss
@@ -8,11 +8,10 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  width: 90%vw;
-  height: 100vh;
+  // width: 90%vw;
+  // height: 100vh;
 
-
-  .stretch-preview{
+  .stretch-preview {
     width: 350px;
     height: 350px;
     background-color: index.$color-primary;
@@ -23,23 +22,20 @@
     transition-property: box-shadow;
     transition-duration: 0.5s;
 
-
     &:hover {
       color: rgb(61, 79, 88);
       background-color: index.$color-primary-hover;
       border: 1px solid rgb(93, 108, 116);
       box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px, rgb(231 238 236) 0px 0px 0px 3px;
-
     }
 
-    .stretch-content{
-
-      *{
+    .stretch-content {
+      * {
         text-decoration: none;
         color: black;
       }
 
-      h2{
+      h2 {
         margin-top: 10px;
         font-size: 20pt;
         font-family: index.$font-title;
@@ -47,59 +43,52 @@
         font-weight: 700;
       }
 
-      img{
+      img {
         width: 200px;
         height: 200px;
       }
 
-      h3{
+      h3 {
         font-size: 14pt;
         font-family: index.$font-title;
         font-weight: 400;
       }
 
-      .add-to-routine{
-          display: inline-block;
-          outline: 0;
-          appearance: none;
-          padding: 0px 12px;
-          border-radius: 4px;
-          cursor: pointer;
-          background-color: index.$color-background;
-          border: 1px solid rgb(137, 151, 155);
-          box-shadow: rgb(6 22 33 / 30%) 0px 1px 2px;
-          color: rgb(61, 79, 88);
-          font-size: 14px;
-          font-weight: 400;
-          height: 36px;
-          transition: all 150ms ease-in-out 0s;
-          margin-top: 10px;
-          margin-right: 8px;
+      .add-to-routine {
+        display: inline-block;
+        outline: 0;
+        appearance: none;
+        padding: 0px 12px;
+        border-radius: 4px;
+        cursor: pointer;
+        background-color: index.$color-background;
+        border: 1px solid rgb(137, 151, 155);
+        box-shadow: rgb(6 22 33 / 30%) 0px 1px 2px;
+        color: rgb(61, 79, 88);
+        font-size: 14px;
+        font-weight: 400;
+        height: 36px;
+        transition: all 150ms ease-in-out 0s;
+        margin-top: 10px;
+        margin-right: 8px;
 
-          &:hover {
-              color: rgb(61, 79, 88);
-              background-color: index.$color-secondary;
-              border: 1px solid rgb(93, 108, 116);
-              box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px, rgb(231 238 236) 0px 0px 0px 3px;
-          }
-        }
-
-        #selectRoutines{
-          border: 1px solid rgb(137, 151, 155);
-          height: 36px;
-          width: 140px;
-          border-radius: 4px;
-          background-color: index.$color-background;
+        &:hover {
           color: rgb(61, 79, 88);
+          background-color: index.$color-secondary;
+          border: 1px solid rgb(93, 108, 116);
+          box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px,
+            rgb(231 238 236) 0px 0px 0px 3px;
         }
+      }
+
+      #selectRoutines {
+        border: 1px solid rgb(137, 151, 155);
+        height: 36px;
+        width: 140px;
+        border-radius: 4px;
+        background-color: index.$color-background;
+        color: rgb(61, 79, 88);
+      }
     }
-
-
-
-
   }
-
-
-
-
 }
