--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -14,7 +14,8 @@
   // justify-content: center;
   transition: all 0.75s ease;
   text-decoration: none;
-  padding: 20px;
+  padding-top: 90px;
+  padding-left: 30px;
   color: black;
 
   &.active {
@@ -22,24 +23,24 @@
     text-decoration: none;
   }
 
-  .navbar-close {
-    display: flex;
-    justify-content: flex-end;
-  }
+  // .navbar-close {
+  //   display: flex;
+  //   justify-content: flex-end;
+  // }
 
-  .navbar-close-button {
-    // background-color: white;
-    // border-radius: 50%;
-    width: 25px;
-    height: 25px;
-    // border: 2px solid black;
-    background-image: url("../../../public/close_black_24dp.svg");
+  // .navbar-close-button {
+  //   // background-color: white;
+  //   // border-radius: 50%;
+  //   width: 25px;
+  //   height: 25px;
+  //   // border: 2px solid black;
+  //   background-image: url("../../../public/close_black_24dp.svg");
 
-    // &:hover {
-    //     font-weight: 500;
-    //     text-decoration: none;
-    //   }
-  }
+  //   // &:hover {
+  //   //     font-weight: 500;
+  //   //     text-decoration: none;
+  //   //   }
+  // }
 
   .navbar-content {
     text-align: center;
@@ -57,11 +58,15 @@
 
     // li {
     //   margin-bottom: 25px;
-    //   a {
-    //     font-size: inherit;
-    //     color: inherit;
-    //     text-decoration: none;
-    //   }
+    a {
+      font-size: inherit;
+      color: inherit;
+      text-decoration: none;
+
+      a:vistied {
+        text-decoration: none;
+      }
+    }
 
     //
     // }
