--- a/src/Components/Topbar/Topbar.scss
+++ b/src/Components/Topbar/Topbar.scss
@@ -5,10 +5,11 @@
   height: 70px;
   background-color: $color-background;
   color: $color-primary;
-  // position: fixed;
+  position: fixed;
   top: 0;
   z-index: 3;
   transition: all 1s ease;
+  padding-top: 10px;
 
   .wrapper {
     padding: 0px 30px;
