styled first and second section of landing page

--- a/src/Components/Topbar/Topbar.scss
+++ b/src/Components/Topbar/Topbar.scss
@@ -10,6 +10,7 @@
   z-index: 3;
   transition: all 1s ease;
   padding-top: 10px;
+  // border: 1px solid black;
 
   .wrapper {
     padding: 0px 30px;
