--- a/src/Components/App.scss
+++ b/src/Components/App.scss
@@ -1,9 +1,10 @@
 @use "index";
 
 .container {
-  height: 100%;
+  height: 100vh;
   padding: 50px 0 100px 0;
   background-color: index.$color-background;
 }
 .content {
+  padding-top: 20px;
 }
