created styling mixins and variables in index.html for reference

--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -6,7 +6,7 @@
 
     display: flex;
     background-color: $color-background;
-    height: 800px;
+    height: 880px;
 
     &-img {
       width: 50vw;
@@ -40,16 +40,7 @@
       &-button {
         margin-top: 24px;
         button {
-          padding: 4px 12px;
-          background-color: black;
-          color: white;
-          border: none;
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-          border-radius: 4px;
-
-          &:hover {
-            box-shadow: none;
-          }
+          @include button;
         }
       }
     }
@@ -92,9 +83,9 @@
         flex-direction: column;
         justify-content: center;
         background-color: $color-background;
-        border-radius: 48px;
         padding: 0 28px;
         @include font-detail;
+        border-radius: 48px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         h2 {
           font-weight: 600;
@@ -103,6 +94,13 @@
         p {
           text-align: center;
         }
+      }
+    }
+  }
+
+  &__about {
+    &-list {
+      svg {
       }
     }
   }
