--- a/src/Components/index.scss
+++ b/src/Components/index.scss
@@ -1,7 +1,17 @@
+//font variables
 $font-content: "Signika Negative", sans-serif;
 $font-title: "Signika Negative", sans-serif;
 $font-logo: "Signika Negative", sans-serif;
 
+//color variables
+$color-background: #ecf5ff;
+$color-primary: #d6e9ff;
+$color-primary-hover: #6f9dc8;
+$color-secondary: #6a8cb5;
+$color-tertiary: #23b54d;
+
+//mixins
+//@include mixin-name
 @mixin font-content() {
   font-family: $font-content;
   font-size: 32px;
@@ -18,11 +28,30 @@ $font-logo: "Signika Negative", sans-serif;
   font-weight: 600;
 }
 
-$color-background: #ecf5ff;
-$color-primary: #d6e9ff;
-$color-primary-hover: #6f9dc8;
-$color-secondary: #6a8cb5;
-$color-tertiary: #23b54d;
+@mixin button() {
+  padding: 4px 12px;
+  background-color: black;
+  color: white;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  transition-property: box-shadow;
+  transition-duration: 0.2s;
+
+  &:hover {
+    box-shadow: none;
+  }
+}
+
+@mixin card($card-color) {
+  width: 300px;
+  height: 300px;
+  background-color: $card-color;
+  padding: 0 28px;
+  @include font-detail;
+  border-radius: 48px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
 
 * {
   margin: 0;
