--- a/src/Components/Auth/auth.scss
+++ b/src/Components/Auth/auth.scss
@@ -1,18 +1,14 @@
-@use "../index.scss";
+@import "../index.scss";
 
 #login-container{
   height: 100vh;
 }
 #content-container{
   margin: 20px 20px;
-  font-family: index.$font-title;
+  font-family: $font-title;
   font-weight: 700;
   font-size: 28pt;
   text-align: center;
-
-  .description{
-
-  }
 
   .login{
     font-size: 18pt;
@@ -35,7 +31,7 @@
       height: 36px;
       width: 200px;
       border-radius: 4px;
-      background-color: index.$color-background;
+      background-color: $color-background;
       color: rgb(61, 79, 88);
       font-size: 12pt;
       margin-left: 43px;
@@ -53,7 +49,7 @@
       height: 36px;
       width: 200px;
       border-radius: 4px;
-      background-color: index.$color-background;
+      background-color: $color-background;
       color: rgb(61, 79, 88);
       font-size: 12pt;
 
@@ -62,27 +58,6 @@
 
 
   #create-btn{
-    display: block;
-    outline: 0;
-    appearance: none;
-    padding: 0px 12px;
-    border-radius: 4px;
-    cursor: pointer;
-    background-color: index.$color-background;
-    border: 1px solid rgb(137, 151, 155);
-    box-shadow: rgb(6 22 33 / 30%) 0px 1px 2px;
-    color: rgb(61, 79, 88);
-    font-size: 14px;
-    font-weight: 400;
-    height: 36px;
-    transition: all 150ms ease-in-out 0s;
-    margin: 20px auto;
-
-    &:hover {
-        color: rgb(61, 79, 88);
-        background-color: index.$color-secondary;
-        border: 1px solid rgb(93, 108, 116);
-        box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px, rgb(231 238 236) 0px 0px 0px 3px;
-    }
+    @include button;
   }
 }
