--- a/src/Components/Topbar/Topbar.scss
+++ b/src/Components/Topbar/Topbar.scss
@@ -22,6 +22,11 @@
       display: flex;
       align-items: center;
 
+      button{
+        @include button;
+        margin-right: 10px;
+      }
+
       .itemContainer {
         display: flex;
         align-items: center;
