--- a/src/Components/index.scss
+++ b/src/Components/index.scss
@@ -7,8 +7,11 @@ $color-primary: #d6e9ff;
 $color-primary-hover: #6f9dc8;
 $color-secondary: #6a8cb5;
 $color-tertiary: #23b54d;
+$color-lightG: #cfe0c3;
 $color-accent-secondary: #0a253b;
 $color-button-secondary: #20c1c3;
+$color-accent-tertiary: #70a9a1;
+
 * {
   margin: 0;
   padding: 0;
