--- a/src/Components/SingleRoutine/singleroutine.scss
+++ b/src/Components/SingleRoutine/singleroutine.scss
@@ -22,6 +22,7 @@
   img {
     width: 200px;
     height: 200px;
+    border-radius: 10px;
   }
 
   h3 {
@@ -32,16 +33,22 @@
 
   .single-routine-container {
     display: flex;
+    // flex-shrink: inherit;
     flex-direction: row;
+    flex-wrap: wrap;
     margin: 20px auto;
     gap: 10px;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    width: 90%vw;
+    width: 100vw;
     height: auto;
 
+    background-image: url(https://media.istockphoto.com/photos/businesspeople-doing-exercise-behind-desk-picture-id1144374119?k=20&m=1144374119&s=612x612&w=0&h=HxgKw3oIgC0nhDRImT7gpsgJDiilfSVdoqYd96dBDbg=);
+    // background-size: cover;
+
     .stretch-preview {
+      opacity: 0.95;
       width: 350px;
       height: 350px;
       background-color: index.$color-primary;
@@ -51,6 +58,7 @@
       box-shadow: 10px 8px 0px index.$color-primary-hover;
       transition-property: box-shadow;
       transition-duration: 0.5s;
+      border-radius: 10px;
 
       &:hover {
         color: rgb(61, 79, 88);
