--- a/src/Components/SingleStretch/singlestretch.scss
+++ b/src/Components/SingleStretch/singlestretch.scss
@@ -8,21 +8,26 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  width: 90%vw;
-  height: auto;
+  width: 100vw;
+  height: 100vh;
+
+  background-image: url('https://media.istockphoto.com/photos/rear-view-of-a-businessman-stretching-his-arms-picture-id1189508152?k=20&m=1189508152&s=612x612&w=0&h=aZVcISiDZ7Iq8E0bpPG1SX4ZC3Iqwn5mVcLhey4YBcs= ');
+  background-size: cover;
+  background-position: right;
 
   .single-stretch-card {
-    width: 50vw;
-    height: 50vh;
-    background-color: index.$color-primary;
+    width: 100vw;
+    height: 100vh;
+    background-color: index.$color-accent-tertiary;
     text-align: center;
-    border-radius: 10px;
-    margin: 20px 0;
-    box-shadow: 10px 8px 0px;
-    color: index.$color-primary-hover;
+    // border-radius: 10px;
+    // margin: 20px 0;
+    // box-shadow: 10px 8px 0px;
+    color: index.$color-accent-secondary;
     transition-property: box-shadow;
     transition-duration: 0.5s;
     padding-top: 15px;
+    opacity: 0.95;
 
     h2 {
       margin-top: 10px;
@@ -41,17 +46,18 @@
       color: index.$color-accent-secondary;
     }
 
-    &:hover {
-      color: rgb(61, 79, 88);
-      background-color: index.$color-primary-hover;
-      border: 1px solid rgb(93, 108, 116);
-      box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px, rgb(231 238 236) 0px 0px 0px 3px;
-    }
+    // &:hover {
+    //   color: rgb(61, 79, 88);
+    //   background-color: index.$color-primary-hover;
+    //   border: 1px solid rgb(93, 108, 116);
+    //   box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px, rgb(231 238 236) 0px 0px 0px 3px;
+    // }
 
     .single-stretch-description {
       * {
         text-decoration: none;
         color: black;
+        margin: 0px 50px;
       }
 
       img {
@@ -61,6 +67,9 @@
       }
 
       h3 {
+        display: list-item; /* This has to be "list-item"                                               */
+        vertical-align: center;
+        list-style-position: outside;
         font-size: 14pt;
         font-family: index.$font-title;
         font-weight: 400;
