--- a/src/Components/Routines/routines.scss
+++ b/src/Components/Routines/routines.scss
@@ -1,4 +1,4 @@
-@use "../index.scss";
+@import "../index.scss";
 
 .routines-container {
   display: flex;
@@ -14,17 +14,17 @@
   .routine-preview {
     width: 300px;
     height: 300px;
-    background-color: index.$color-primary;
+    background-color: $color-primary;
     text-align: center;
     border-radius: 10px;
     margin: 20px 0;
-    box-shadow: 10px 8px 0px index.$color-primary-hover;
+    box-shadow: 10px 8px 0px $color-primary-hover;
     transition-property: box-shadow;
     transition-duration: 0.5s;
 
     &:hover {
       color: rgb(61, 79, 88);
-      background-color: index.$color-primary-hover;
+      background-color: $color-primary-hover;
       border: 1px solid rgb(93, 108, 116);
       box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px, rgb(231 238 236) 0px 0px 0px 3px;
     }
@@ -38,39 +38,21 @@
         color: black;
       }
       .remove-routine {
-        display: inline-block;
-        outline: 0;
-        appearance: none;
-        padding: 0px 12px;
-        border-radius: 4px;
-        cursor: pointer;
-        background-color: index.$color-background;
-        border: 1px solid rgb(137, 151, 155);
-        box-shadow: rgb(6 22 33 / 30%) 0px 1px 2px;
-        color: rgb(61, 79, 88);
-        font-size: 14px;
-        font-weight: 400;
-        height: 36px;
-        transition: all 150ms ease-in-out 0s;
+        @include button;
         position: absolute;
         bottom: 3%;
         margin: 10px auto;
         right: 25%;
-
-        &:hover {
-          color: rgb(61, 79, 88);
-          background-color: index.$color-secondary;
-          border: 1px solid rgb(93, 108, 116);
-          box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px,
-            rgb(231 238 236) 0px 0px 0px 3px;
-        }
+        height: 40px;
+        width: 150px;
+        font-size: 12pt;
       }
 
       .routine-info {
         h2 {
           margin-top: 10px;
           font-size: 20pt;
-          font-family: index.$font-title;
+          font-family: $font-title;
           letter-spacing: 2px;
           font-weight: 700;
         }
@@ -82,7 +64,7 @@
 
         h3 {
           font-size: 14pt;
-          font-family: index.$font-title;
+          font-family: $font-title;
           font-weight: 400;
           overflow: hidden;
           text-overflow: ellipsis;
@@ -99,27 +81,10 @@
   display: flex;
   justify-content: center;
   button {
-    outline: 0;
-    appearance: none;
-    padding: 0px 12px;
-    border-radius: 4px;
-    cursor: pointer;
-    background-color: index.$color-background;
-    border: 1px solid rgb(137, 151, 155);
-    box-shadow: rgb(6 22 33 / 30%) 0px 1px 2px;
-    color: rgb(61, 79, 88);
-    font-size: 28px;
-    font-weight: 400;
-    height: 100px;
-    width: 400px;
-    transition: all 150ms ease-in-out 0s;
-    margin: 10px auto;
-
-    &:hover {
-      color: rgb(61, 79, 88);
-      background-color: index.$color-secondary;
-      border: 1px solid rgb(93, 108, 116);
-      box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px, rgb(231 238 236) 0px 0px 0px 3px;
-    }
+   @include button;
+   margin: 10px auto;
+   height: 100px;
+   width: 400px;
+   font-size: 32pt;
   }
 }
