--- a/src/Components/Account/account.scss
+++ b/src/Components/Account/account.scss
@@ -3,9 +3,9 @@
 .main-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 100vh;
   width: 100vw;
-  padding-top: 50px;
 
   .account-container {
     display: flex;
@@ -25,13 +25,27 @@
       font-size: 14pt;
       font-family: index.$font-title;
       font-weight: 300;
+      align-items: center;
 
-      label,
+      label {
+        text-decoration: none;
+        background-color: #eeeeee;
+        color: #333333;
+        padding: 2px;
+        border-top: 1px solid #cccccc;
+        border-right: 1px solid #333333;
+        border-bottom: 1px solid #333333;
+        border-left: 1px solid #cccccc;
+        border-radius: 25px;
+        color: index.$color-primary;
+        background-color: index.$color-tertiary;
+      }
       h3 {
         font-size: 14pt;
         font-family: index.$font-content;
         font-weight: 400;
-        margin: 40px 0px 12px 0px;
+        margin: 20px 0px 12px 0px;
+        display: inline-block;
       }
       img {
         margin-top: 25px;
@@ -47,6 +61,8 @@
         padding: 8px 8x;
         box-sizing: border-box;
         font-size: 16px;
+        margin: 10px;
+        text-align: center;
 
         &:focus {
           border: 3px solid index.$color-tertiary;
