--- a/src/Components/Account/account.scss
+++ b/src/Components/Account/account.scss
@@ -10,6 +10,7 @@
   .account-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     box-shadow: 0 4px 8px 0 index.$color-secondary;
     width: 50vw;
     height: 50vh;
@@ -22,50 +23,56 @@
     }
 
     .form-widget {
+      text-align: center;
       font-size: 14pt;
       font-family: index.$font-title;
       font-weight: 300;
-      align-items: center;
+      margin: auto;
 
       label {
         text-decoration: none;
         background-color: #eeeeee;
         color: #333333;
-        padding: 2px;
-        border-top: 1px solid #cccccc;
-        border-right: 1px solid #333333;
-        border-bottom: 1px solid #333333;
-        border-left: 1px solid #cccccc;
+        padding: 5px;
+        border-top: 2px solid #cccccc;
+        border-right: 2px solid #333333;
+        border-bottom: 2px solid #333333;
+        border-left: 2px solid #cccccc;
         border-radius: 25px;
         color: index.$color-primary;
         background-color: index.$color-tertiary;
       }
-      h3 {
+      .info-container {
         font-size: 14pt;
         font-family: index.$font-content;
         font-weight: 400;
-        margin: 20px 0px 12px 0px;
-        display: inline-block;
+        margin: 25px;
+
+        input {
+          width: 50%;
+          padding: 8px 8x;
+          box-sizing: border-box;
+          font-size: 16px;
+          margin: 10px;
+          text-align: center;
+          display: inline-block;
+
+          &:focus {
+            border: 3px solid index.$color-tertiary;
+          }
+        }
       }
       img {
-        margin-top: 25px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        margin-bottom: 10px;
         border-radius: 50%;
         border: 4px solid index.$color-primary;
 
         &:hover {
           box-shadow: 0 0 2px 2px index.$color-tertiary;
-        }
-      }
-      input {
-        width: 50%;
-        padding: 8px 8x;
-        box-sizing: border-box;
-        font-size: 16px;
-        margin: 10px;
-        text-align: center;
-
-        &:focus {
-          border: 3px solid index.$color-tertiary;
         }
       }
     }
@@ -77,15 +84,13 @@
       border-radius: 4px;
       cursor: pointer;
       background-color: index.$color-background;
-      border: 1px solid rgb(137, 151, 155);
+      border: 2px solid rgb(137, 151, 155);
       box-shadow: rgb(6 22 33 / 30%) 0px 1px 2px;
       color: rgb(61, 79, 88);
       font-size: 14px;
       font-weight: 400;
       height: 36px;
       transition: all 150ms ease-in-out 0s;
-      margin-top: 12px;
-      margin-right: 8px;
 
       &:hover {
         color: index.$color-tertiary;
