restyled home and topbar buttons with new mixin

--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -40,7 +40,7 @@
       &-button {
         margin-top: 24px;
         button {
-          @include button;
+          @include button-menu;
         }
       }
     }
