--- a/src/Components/Topbar/Topbar.scss
+++ b/src/Components/Topbar/Topbar.scss
@@ -22,8 +22,8 @@
       display: flex;
       align-items: center;
 
-      button{
-        @include button;
+      button {
+        @include button-menu;
         margin-right: 10px;
       }
 
