--- a/src/Components/index.scss
+++ b/src/Components/index.scss
@@ -35,11 +35,20 @@ $color-tertiary: #23b54d;
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
-  transition-property: box-shadow;
-  transition-duration: 0.2s;
+}
+
+@mixin button-menu() {
+  padding: 4px 12px;
+  background-color: black;
+  color: white;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  transition: all 150ms ease-in-out 0s;
 
   &:hover {
-    box-shadow: none;
+    box-shadow: 2px 6px 6px rgba(0, 0, 0, 0.3);
+    transform: translateY(-2px);
   }
 }
 
