--- a/src/Components/index.scss
+++ b/src/Components/index.scss
@@ -24,7 +24,7 @@ $color-tertiary: #23b54d;
 }
 @mixin font-logo() {
   font-family: $font-logo;
-  font-size: 64px;
+  font-size: 32px;
   font-weight: 600;
 }
 
@@ -35,6 +35,7 @@ $color-tertiary: #23b54d;
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
+  cursor: pointer;
 }
 
 @mixin button-menu() {
@@ -45,10 +46,11 @@ $color-tertiary: #23b54d;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   transition: all 150ms ease-in-out 0s;
+  cursor: pointer;
 
   &:hover {
-    box-shadow: 2px 6px 6px rgba(0, 0, 0, 0.3);
-    transform: translateY(-2px);
+    box-shadow: 2px 5px 6px rgba(0, 0, 0, 0.3);
+    transform: translateY(-1px);
   }
 }
 
