--- a/src/Components/SingleRoutine/singleroutine.scss
+++ b/src/Components/SingleRoutine/singleroutine.scss
@@ -1,4 +1,5 @@
 @use '../index.scss';
+@import '../index.scss';
 
 .main-container {
   .single-routine-header {
@@ -11,17 +12,17 @@
   }
 
   h2 {
-    margin-top: 50px;
+    // margin-top: 10px;
     font-size: 20pt;
     font-family: index.$font-title;
     letter-spacing: 2px;
     font-weight: 700;
-    color: index.$color-accent-secondary;
+    color: navy;
   }
 
   img {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border-radius: 10px;
   }
 
@@ -44,35 +45,40 @@
     width: 100vw;
     height: auto;
 
-    background-image: url(https://media.istockphoto.com/photos/businesspeople-doing-exercise-behind-desk-picture-id1144374119?k=20&m=1144374119&s=612x612&w=0&h=HxgKw3oIgC0nhDRImT7gpsgJDiilfSVdoqYd96dBDbg=);
-    // background-size: cover;
+    background-image: url('https://images.unsplash.com/photo-1533090161767-e6ffed986c88?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZW1wdHklMjBkZXNrfGVufDB8fDB8fA%3D%3D&w=1000&q=80');
+    background-position-y: 60%;
+    background-repeat: no-repeat;
+    background-size: 120%;
 
     .stretch-preview {
+      display: flex;
       opacity: 0.95;
-      width: 350px;
-      height: 350px;
       background-color: index.$color-primary;
       text-align: center;
-      border-radius: 10px;
+      // border-radius: 10px;
       margin: 20px 0;
       box-shadow: 10px 8px 0px index.$color-primary-hover;
       transition-property: box-shadow;
       transition-duration: 0.5s;
       border-radius: 10px;
+      @include card($color-primary);
+      padding: 20px;
+      align-items: center;
+      justify-content: center;
 
-      &:hover {
-        color: rgb(61, 79, 88);
-        background-color: index.$color-primary-hover;
-        border: 1px solid rgb(93, 108, 116);
-        box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px,
-          rgb(231 238 236) 0px 0px 0px 3px;
-      }
-
+      // &: hover {
+      //   color: rgb(61, 79, 88);
+      //   background-color: index.$color-primary-hover;
+      //   border: 1px solid rgb(93, 108, 116);
+      //   box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px,
+      //     rgb(231 238 236) 0px 0px 0px 3px;
+      // }
       .add-to-routine {
         display: inline-block;
+        align-content: center;
         outline: 0;
         appearance: none;
-        padding: 0px 12px;
+        padding: 0px 10px;
         border-radius: 4px;
         cursor: pointer;
         background-color: index.$color-background;
@@ -85,14 +91,15 @@
         transition: all 150ms ease-in-out 0s;
         margin-top: 10px;
         margin-right: 8px;
+        @include button();
 
-        &:hover {
-          color: rgb(61, 79, 88);
-          background-color: index.$color-secondary;
-          border: 1px solid rgb(93, 108, 116);
-          box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px,
-            rgb(231 238 236) 0px 0px 0px 3px;
-        }
+        // &:hover {
+        //   color: rgb(61, 79, 88);
+        //   background-color: index.$color-secondary;
+        //   border: 1px solid rgb(93, 108, 116);
+        //   box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px,
+        //     rgb(231 238 236) 0px 0px 0px 3px;
+        // }
       }
 
       #selectRoutines {
@@ -131,16 +138,35 @@
       margin-top: 10px;
       margin-right: 8px;
       margin-bottom: 10px;
-      color: white;
-      background-color: #20c1c3;
+      @include button();
 
-      &:hover {
-        color: rgb(61, 79, 88);
-        background-color: index.$color-secondary;
-        border: 1px solid rgb(93, 108, 116);
-        box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px,
-          rgb(231 238 236) 0px 0px 0px 3px;
-      }
+      // &: hover {
+      //   color: rgb(61, 79, 88);
+      //   background-color: index.$color-secondary;
+      //   border: 1px solid rgb(93, 108, 116);
+      //   box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px,
+      //     rgb(231 238 236) 0px 0px 0px 3px;
+      // }
+    }
+  }
+  .landingpage-single {
+    width: 100vw;
+    height: 12vw;
+    display: flex;
+    // position: absolute;
+
+    justify-content: center;
+    align-items: center;
+    background-image: url('https://htpartners.com/wp-content/uploads/2017/07/iStock_000007946674Small.jpg');
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: cover;
+
+    .routine-banner {
+      top: 50%;
+      left: 20%;
+      color: white;
+      border-style: inset;
     }
   }
 }
