--- a/src/Components/SingleRoutine/singleroutine.scss
+++ b/src/Components/SingleRoutine/singleroutine.scss
@@ -13,11 +13,15 @@
 
   h2 {
     // margin-top: 10px;
+    // display: flex;
     font-size: 20pt;
+    align-items: center;
+    justify-items: center;
+    text-align: center;
     font-family: $font-title;
     letter-spacing: 2px;
     font-weight: 700;
-    color: navy;
+    color: $color-tertiary;
   }
 
   img {
@@ -34,10 +38,8 @@
 
   .single-routine-container {
     display: flex;
-    // flex-shrink: inherit;
-    flex-direction: row;
     flex-wrap: wrap;
-    margin: 20px auto;
+    // margin: 20px auto;
     gap: 10px;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -45,18 +47,25 @@
     width: 100vw;
     height: auto;
 
+    //background image shadow
+    box-shadow: inset 0 0 0 1000px rgba(137, 155, 170, 0.4);
     background-image: url('https://images.unsplash.com/photo-1533090161767-e6ffed986c88?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZW1wdHklMjBkZXNrfGVufDB8fDB8fA%3D%3D&w=1000&q=80');
     background-position-y: 60%;
+    // position: left;
     background-repeat: no-repeat;
     background-size: 120%;
+    // border-style: blur;
+    border-width: 3px;
 
     .stretch-preview {
+      flex-direction: column;
       display: flex;
       opacity: 0.95;
       background-color: index.$color-primary;
       text-align: center;
       // border-radius: 10px;
       margin: 20px 0;
+      padding-bottom: 2px;
       box-shadow: 10px 8px 0px $color-primary-hover;
       transition-property: box-shadow;
       transition-duration: 0.5s;
@@ -65,14 +74,9 @@
       padding: 20px;
       align-items: center;
       justify-content: center;
+      box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+      // mix-blend-mode: soft-light;
 
-      // &: hover {
-      //   color: rgb(61, 79, 88);
-      //   background-color: index.$color-primary-hover;
-      //   border: 1px solid rgb(93, 108, 116);
-      //   box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px,
-      //     rgb(231 238 236) 0px 0px 0px 3px;
-      // }
       .add-to-routine {
         display: inline-block;
         align-content: center;
@@ -129,7 +133,7 @@
       border-radius: 4px;
       cursor: pointer;
       border: 1px solid rgb(137, 151, 155);
-      box-shadow: rgb(6 22 33 / 30%) 0px 1px 2px;
+      box-shadow: rgba(125, 146, 161, 0.3) 0px 1px 2px;
       color: rgb(61, 79, 88);
       font-size: 14px;
       font-weight: 400;
@@ -138,25 +142,17 @@
       margin-right: 8px;
       margin-bottom: 10px;
       @include button();
-
-      // &: hover {
-      //   color: rgb(61, 79, 88);
-      //   background-color: index.$color-secondary;
-      //   border: 1px solid rgb(93, 108, 116);
-      //   box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px,
-      //     rgb(231 238 236) 0px 0px 0px 3px;
-      // }
     }
   }
   .landingpage-single {
     width: 100vw;
     height: 12vw;
     display: flex;
-    // position: absolute;
-
     justify-content: center;
     align-items: center;
     background-image: url('https://htpartners.com/wp-content/uploads/2017/07/iStock_000007946674Small.jpg');
+    filter: blur(8px);
+    -webkit-filter: blur(2px);
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: cover;
@@ -166,6 +162,20 @@
       left: 20%;
       color: white;
       border-style: inset;
+    }
+  }
+  .tier3 {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    gap: 10px;
+    height: 20vh;
+    width: 100vw;
+    padding-top: 50px;
+    @include font-content();
+
+    .addmore {
+      @include button();
     }
   }
 }
