--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -42,6 +42,8 @@
         margin-top: 24px;
         button {
           @include button-menu;
+          // background-color: rgba(0, 0, 0, 0.678);
+          background-color: #31363a;
         }
       }
     }
@@ -108,6 +110,7 @@
     align-items: center;
     gap: 32px;
     padding: 100px 150px;
+    text-align: center;
     &-title {
       font-weight: 600;
     }
