--- a/src/Components/Topbar/Topbar.scss
+++ b/src/Components/Topbar/Topbar.scss
@@ -10,7 +10,8 @@
   z-index: 3;
   transition: all 1s ease;
   padding-top: 10px;
-  // border: 1px solid black;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.116);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   .wrapper {
     padding: 0px 30px;
@@ -32,14 +33,17 @@
 
     .topbar-right {
       display: flex;
-      gap: 16px;
+      gap: 12px;
       &-button {
         display: flex;
         align-items: center;
 
         button {
           @include button-menu;
+          background-color: $color-secondary;
           margin-right: 10px;
+          font-weight: 300;
+          letter-spacing: 1px;
         }
 
         .itemContainer {
