--- a/src/Components/index.scss
+++ b/src/Components/index.scss
@@ -30,7 +30,7 @@ $color-tertiary: #23b54d;
 
 @mixin button() {
   padding: 4px 12px;
-  background-color: black;
+  background-color: #272b2e;
   color: white;
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -40,7 +40,7 @@ $color-tertiary: #23b54d;
 
 @mixin button-menu() {
   padding: 4px 12px;
-  background-color: black;
+  background-color: $color-tertiary;
   color: white;
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
