--- a/src/Components/index.scss
+++ b/src/Components/index.scss
@@ -9,6 +9,10 @@ $color-primary: #d6e9ff;
 $color-primary-hover: #6f9dc8;
 $color-secondary: #6a8cb5;
 $color-tertiary: #23b54d;
+$color-error: #ef4444;
+
+//shadow variables
+$box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 //mixins
 //@include mixin-name
@@ -29,7 +33,12 @@ $color-tertiary: #23b54d;
 }
 
 @mixin button() {
-  padding: 4px 12px;
+  font-size: 16px;
+  padding: 0 24px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #272b2e;
   color: white;
   border: none;
@@ -39,7 +48,12 @@ $color-tertiary: #23b54d;
 }
 
 @mixin button-menu() {
-  padding: 4px 12px;
+  font-size: 16px;
+  padding: 0 24px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: $color-tertiary;
   color: white;
   border: none;
