--- a/src/Components/Account/account.scss
+++ b/src/Components/Account/account.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  padding-top: 128px;
   width: 100vw;
 
   .account-container {
