--- a/src/Components/App.scss
+++ b/src/Components/App.scss
@@ -1,10 +1,10 @@
 @use "index";
 
 .container {
-  height: 100vh;
-  padding: 50px 0 100px 0;
+  padding: 50px 0 0 0;
   background-color: index.$color-background;
 }
 .content {
   padding-top: 20px;
+  min-height: calc(100vh - 122px);
 }
