--- a/src/Components/Topbar/Topbar.scss
+++ b/src/Components/Topbar/Topbar.scss
@@ -9,92 +9,94 @@
   top: 0;
   z-index: 3;
   transition: all 1s ease;
-  padding-top: 10px;
+  // padding-top: 10px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.116);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-  .wrapper {
-    padding: 0px 30px;
+  padding: 0px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  .topbar-left {
+    // padding-top: 8px;
+    .logo {
+      @include font-logo;
+      color: black;
+    }
+
+    a {
+      text-decoration: none;
+    }
+  }
+
+  .topbar-right {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-
-    .topbar-left {
-      padding-top: 8px;
-      .logo {
-        @include font-logo;
-        color: black;
-      }
+    gap: 12px;
+    &-button {
+      display: flex;
+      align-items: center;
 
       a {
         text-decoration: none;
       }
-    }
-
-    .topbar-right {
-      display: flex;
-      gap: 12px;
-      &-button {
-        display: flex;
-        align-items: center;
-
-        button {
-          @include button-menu;
-          background-color: $color-secondary;
-          margin-right: 10px;
-          font-weight: 300;
-          letter-spacing: 1px;
-        }
-
-        .itemContainer {
-          display: flex;
-          align-items: center;
-          margin-left: 30px;
-
-          .icon {
-            font-size: 18px;
-            margin-right: 5px;
-          }
-
-          span {
-            font-size: 15px;
-            font-weight: 500;
-          }
-        }
+      button {
+        @include button-sm;
+        background-color: $color-secondary;
+        margin-right: 10px;
+        font-weight: 300;
+        // letter-spacing: 1px;
       }
 
-      &-menu {
-        margin-top: 4px;
-        .hamburger {
-          width: 26px;
-          height: 18px;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          cursor: pointer;
+      .itemContainer {
+        display: flex;
+        align-items: center;
+        margin-left: 30px;
 
+        .icon {
+          font-size: 18px;
+          margin-right: 5px;
+        }
+
+        span {
+          font-size: 15px;
+          font-weight: 500;
+        }
+      }
+    }
+
+    &-menu {
+      // margin-top: 4px;
+      .hamburger {
+        width: 26px;
+        height: 18px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
+
+        span {
+          width: 100%;
+          height: 2px;
+          background-color: black;
+          transform-origin: left;
+          transition: all 500ms ease;
+        }
+        &.active {
           span {
-            width: 100%;
-            height: 2px;
-            background-color: black;
-            transform-origin: left;
-            transition: all 500ms ease;
-          }
-          &.active {
-            span {
-              &:first-child {
-                background-color: black;
-                transform: rotate(45deg);
-                width: 24px;
-              }
-              &:nth-child(2) {
-                opacity: 0;
-              }
-              &:last-child {
-                background-color: black;
-                transform: rotate(-45deg);
-                width: 24px;
-              }
+            &:first-child {
+              background-color: black;
+              transform: rotate(45deg);
+              width: 24px;
+            }
+            &:nth-child(2) {
+              opacity: 0;
+            }
+            &:last-child {
+              background-color: black;
+              transform: rotate(-45deg);
+              width: 24px;
             }
           }
         }
