--- a/src/Components/SingleRoutine/singleroutine.scss
+++ b/src/Components/SingleRoutine/singleroutine.scss
@@ -2,15 +2,12 @@
 @import '../index.scss';
 
 .main-container {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  // min-height: ;
+
   .single-routine-header {
     text-align: center;
-    // height: 100%;
-  }
-
-  * {
-    text-decoration: none;
-    color: black;
   }
 
   h2 {
@@ -47,7 +44,9 @@
     filter: blur(8px);
     -webkit-filter: blur(2px);
     background-repeat: no-repeat;
-    background-position: 50%;
+    // background-position: 50%;
+    background-position-x: 160px;
+    background-position-y: 50%;
     background-size: cover;
   }
 
@@ -58,8 +57,9 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+    padding: 10px;
     width: 100vw;
-    height: 64%;
+    // height: auto;
 
     //background image shadow
     box-shadow: inset 0 0 0 1000px rgba(137, 155, 170, 0.4);
@@ -67,12 +67,13 @@
     background-position-y: 60%;
     background-repeat: no-repeat;
     background-size: 120%;
+    background-size: cover;
     // border-width: 3px;
 
     .stretch-preview {
       flex-direction: column;
       display: flex;
-      opacity: 0.95;
+      // opacity: 0.95;
       background-color: index.$color-primary;
       text-align: center;
       box-shadow: 10px 8px 0px $color-primary-hover;
@@ -84,6 +85,11 @@
       align-items: center;
       justify-content: center;
       box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+
+      * {
+        text-decoration: none;
+        color: black;
+      }
 
       .add-to-routine {
         outline: 0;
@@ -105,20 +111,22 @@
     }
   }
   .start-routine-footer {
-    // display: contents;
-    position: absolute;
+    display: flex;
+    // position: absolute;
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: auto;
-    left: 45%;
-    top: 45%;
+    // height: 10vh;
+    // left: 45%;
+    align-content: center;
+    justify-content: center;
 
     .warning {
       display: inline-block;
       border: 1px;
       border-radius: 5px;
       background-color: red;
+      height: auto;
     }
 
     .add-to-routine {
@@ -150,7 +158,7 @@
     width: 100%;
     margin: 10px;
     padding: 10px;
-    // padding-top: 50px 0px;
+    background-color: lightblue; // padding-top: 50px 0px;
     @include font-content();
 
     //button
